# MajorMS

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py
data/: config.json  config_en_UK.json  config_es_ES.json  es_ES.txt
src/: CMakeLists.txt  conversion.cpp  conversion.h  dict_configs.h  dictionary.cpp  dictionary.h  main.cpp  major.cpp  major.h  phonemes.cpp  phonemes.h  string_number.cpp  string_number.h
src/ui/: CMakeLists.txt  main.cpp  majorUI.cpp  majorUI.h  majorUI.ui
tests/: CMakeLists.txt  major_test.cpp  string_number.cpp
